<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_rect_shade_color"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/enable_hardcore_mode_title"
        android:gravity="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvMessage"
        style="@style/TextSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingBottom="16dp"
        android:text="@string/enable_hardcore_mode_message"
        android:gravity="center"
        android:alpha="0.8" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="?attr/primaryColor"
        android:alpha="0.1" />

    <TextView
        android:id="@+id/btnEnable"
        style="@style/TextLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/turn_on"
        android:gravity="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btnCancel"
        style="@style/TextSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/cancel"
        android:gravity="center"
        android:alpha="0.6" />

</LinearLayout>
